--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
 								<!-- Nav -->
 									<nav id="nav">
-										<a href="index.html">Homepage</a>
-										<a href="threecolumn.html">Three Column</a>
-										<a href="twocolumn1.html">Two Column #1</a>
-										<a href="twocolumn2.html">Two Column #2</a>
-										<a href="onecolumn.html">One Column</a>
+										<a href="index.html">首頁</a>
+										<a href="threecolumn.html">技術選型</a>
+										<a href="twocolumn1.html">小程序</a>
+										<a href="twocolumn2.html">PWA</a>
+										<a href="onecolumn.html">個人簡介</a>
 									</nav>
 
 							</div>
