--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								<div class="6u 12u(mobile)">
 
 									<!-- Banner Copy -->
-										<p>We do something really useful, important, and unique. Learn all about it here ...</p>
+										<p>应该做点有价值并且重要的事情了，20年专注IT/web,传统企业转型的可以联系我 ...</p>
 										<a href="#" class="button-big">Go on, click me!</a>
 
 								</div>
