--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 									<!-- Banner Copy -->
 										<p>应该做点有价值并且重要的事情了，20年专注IT/web,传统企业转型的可以联系我 ...</p>
-										<a href="#" class="button-big">Go on, click me!</a>
+										<a href="#" class="button-big">来戳我呀！</a>
 
 								</div>
 								<div class="6u 12u(mobile)">
@@ -111,8 +111,18 @@
 									<!-- Feature #1 -->
 										<section>
 											<a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a>
-											<h2>Welcome to Halcyonic</h2>
-											<p>
+											<h2>PWA 的优势在哪？</h2>
+											<p>来列举一下和传统网页应用相比的优势。
+
+												消息推送
+
+												后台加载
+
+												离线使用
+
+												原生应用界面
+
+												另一方面，和原生应用比，PWA 又不需要用户安装，只需要浏览器支持 PWA 就可以了。
 												This is <strong>Halcyonic</strong>, a free site template
 												by <a href="http://twitter.com/ajlkn">AJ</a> for
 												<a href="http://html5up.net">HTML5 UP</a>. It's responsive,
@@ -126,11 +136,9 @@
 									<!-- Feature #2 -->
 										<section>
 											<a href="#" class="bordered-feature-image"><img src="images/pic02.jpg" alt="" /></a>
-											<h2>Responsive You Say?</h2>
+											<h2>消息推送</h2>
 											<p>
-												Yes! Halcyonic is built on the <a href="http://getskel.com">Skel</a>
-												framework, so it has full responsive support for desktop, tablet,
-												and mobile device displays.
+												用户只要允许，即使网页关闭后仍然可以在系统通知栏收到推送消息。
 											</p>
 										</section>
 
@@ -140,11 +148,9 @@
 									<!-- Feature #3 -->
 										<section>
 											<a href="#" class="bordered-feature-image"><img src="images/pic03.jpg" alt="" /></a>
-											<h2>License Info</h2>
+											<h2>后台加载</h2>
 											<p>
-												Halcyonic is licensed under the <a href="http://html5up.net/license">CCA 3.0</a> license,
-												so use it for personal or commercial use as much as you like (just keep
-												the footer credit intact).
+												往常的网页应用只要关闭了网页他的生命就结束了，现在引入了一个 Service Worker 的概念，即使网页关闭，PWA 仍然可以在后台运行获取数据更新
 											</p>
 										</section>
 
@@ -154,10 +160,9 @@
 									<!-- Feature #4 -->
 										<section>
 											<a href="#" class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
-											<h2>Volutpat etiam aliquam</h2>
+											<h2>V离线使用</h2>
 											<p>
-												Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse
-												eu varius nibh. Suspendisse vitae magna eget odio amet mollis.
+												PWA 打开后会缓存一些内容，之后再次访问即使没有网络也可以浏览之前的页面（如同IE时代的离线浏览）
 											</p>
 										</section>
 
@@ -177,14 +182,12 @@
 									<!-- Box #1 -->
 										<section>
 											<header>
-												<h2>Who We Are</h2>
+												<h2>原生应用界面</h2>
 												<h3>A subheading about who we are</h3>
 											</header>
 											<a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
 											<p>
-												Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed.
-												Suspendisse eu varius nibh. Suspendisse vitae magna eget odio amet mollis
-												justo facilisis quis. Sed sagittis mauris amet tellus gravida lorem ipsum.
+												在某些情况下 PWA 应用可以隐藏浏览器本身的所有视觉成分，光从UI和UX上看，很容易认为这就是一个原生界面，如下图其实都是PWA而不是原生应用。
 											</p>
 										</section>
 
@@ -194,15 +197,11 @@
 									<!-- Box #2 -->
 										<section>
 											<header>
-												<h2>What We Do</h2>
+												<h2>桌面图标</h2>
 												<h3>A subheading about what we do</h3>
 											</header>
 											<ul class="check-list">
-												<li>Sed mattis quis rutrum accum</li>
-												<li>Eu varius nibh suspendisse lorem</li>
-												<li>Magna eget odio amet mollis justo</li>
-												<li>Facilisis quis sagittis mauris</li>
-												<li>Amet tellus gravida lorem ipsum</li>
+												PWA只要配上一个图标，再放快捷方式在桌面上（比如一定时间内第二次访问PWA会自动询问是否添加快捷方式到桌面），就真的和原生系统无异了，打开的速度也很快（当然功能不能很庞大）
 											</ul>
 										</section>
 
