--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
 								<div class="6u 12u(mobile)">
 
 									<!-- Banner Copy -->
-										<p>应该做点有价值并且重要的事情了，20年专注IT/web,传统企业转型的可以联系我 ...</p>
-										<a href="#" class="button-big">来戳我呀！</a>
+										<p>昨天，我们的团队收到Google团队发来的一封邮件，说到Chrome浏览器应用程序目前计划在2018年第一季度停止在Windows，Mac和Linux上工作，因为Chrome将继续专注于开放网络。Chrome团队现在正致力于在桌面上安装渐进式Web应用程序（PWA）。和原生应用比，PWA 又不需要用户安装，只需要浏览器支持 PWA 就可以了
+											应该做点有价值并且重要的事情了，20年专注IT/web,传统企业转型的可以联系我 ...</p>
+										<a href="tel:10000" class="button-big">给我打电话呀！</a>
 
 								</div>
 								<div class="6u 12u(mobile)">
@@ -111,22 +112,8 @@
 									<!-- Feature #1 -->
 										<section>
 											<a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a>
-											<h2>PWA 的优势在哪？</h2>
-											<p>来列举一下和传统网页应用相比的优势。
-
-												消息推送
-
-												后台加载
-
-												离线使用
-
-												原生应用界面
-
-												另一方面，和原生应用比，PWA 又不需要用户安装，只需要浏览器支持 PWA 就可以了。
-												This is <strong>Halcyonic</strong>, a free site template
-												by <a href="http://twitter.com/ajlkn">AJ</a> for
-												<a href="http://html5up.net">HTML5 UP</a>. It's responsive,
-												built on HTML5 + CSS3, and includes 5 unique page layouts.
+											<h2>原生应用界面</h2>
+											<p>	在某些情况下 PWA 应用可以隐藏浏览器本身的所有视觉成分，光从UI和UX上看，很容易认为这就是一个原生界面，如下图其实都是PWA而不是原生应用。
 											</p>
 										</section>
 
@@ -160,7 +147,7 @@
 									<!-- Feature #4 -->
 										<section>
 											<a href="#" class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
-											<h2>V离线使用</h2>
+											<h2>离线使用</h2>
 											<p>
 												PWA 打开后会缓存一些内容，之后再次访问即使没有网络也可以浏览之前的页面（如同IE时代的离线浏览）
 											</p>
