增加 推送服务

--- a/index.html
+++ b/index.html
@@ -32,6 +32,21 @@
     <meta name="msapplication-TileImage" content="images/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <script>
+        function showNotification() {
+            Notification.requestPermission(function(result) {
+                if (result === 'granted') {
+                    navigator.serviceWorker.ready.then(function(registration) {
+                        registration.showNotification('Vibration Sample', {
+                            body: 'Buzz! Buzz!',
+                            icon: '../images/touch/chrome-touch-icon-192x192.png',
+                            vibrate: [200, 100, 200, 100, 200, 100, 200],
+                            tag: 'vibration-sample'
+                        });
+                    });
+                }
+            });
+        }
+        showNotification();
         // 桌面端
         var not = new Notification("show note", { icon: "newsong.svg", tag: "song" });
         not.onclick = function() { dosth(this); };
