--- a/index.html
+++ b/index.html
@@ -47,25 +47,30 @@
             });
         }
         showNotification();
+
         // 桌面端
         var not = new Notification("show note", { icon: "newsong.svg", tag: "song" });
-        not.onclick = function() { dosth(this); };
+//        not.onclick = function() { dosth(this); };
 
-        // 在 SW 中使用
-        self.registration.showNotification("New mail from Alice", {
-            actions: [{action: 'archive', title: "Archive"}]
-        });
 
-        self.addEventListener('notificationclick', function(event) {
-            event.notification.close();
-            if (event.action === 'archive') {
-                silentlyArchiveEmail();
-            } else {
-                clients.openWindow("/inbox");
-            }
-        }, false);
 
         if ('serviceWorker' in navigator && 'PushManager' in window) {
+
+            // 在 SW 中使用
+            window.showNotification("");
+            self.registration.showNotification("New mail from Alice", {
+                actions: [{action: 'archive', title: "Archive"}]
+            });
+
+            self.addEventListener('notificationclick', function(event) {
+                event.notification.close();
+                if (event.action === 'archive') {
+                    silentlyArchiveEmail();
+                } else {
+                    clients.openWindow("/inbox");
+                }
+            }, false);
+
 
             window.addEventListener('load', function () {
 
