--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <meta name="theme-color" content="#ffffff">
     <script>
         function showNotification() {
-            Notification.requestPermission(function(result) {
+            Notification.requestPermission(function (result) {
                 if (result === 'granted') {
-                    navigator.serviceWorker.ready.then(function(registration) {
+                    navigator.serviceWorker.ready.then(function (registration) {
                         registration.showNotification('Vibration Sample', {
                             body: 'Buzz! Buzz!',
                             icon: 'images/icons/apple-icon-120x120.png',
@@ -49,15 +49,19 @@
         showNotification();
 
         // 桌面端
-        var not = new Notification("show note", { icon: "newsong.svg", tag: "song" });
+        var not = new Notification("show note", {
+            body: 'Buzz! Buzz!',
+            icon: 'images/icons/apple-icon-120x120.png',
+            vibrate: [200, 100, 200, 100, 200, 100, 200]
+        });
+
         var not2 = new Notification("联系我", {
             body: 'Buzz! Buzz!',
             icon: 'images/icons/apple-icon-120x120.png',
             vibrate: [200, 100, 200, 100, 200, 100, 200],
-            tag: vibration-sample'
+            tag: 'vibration - sample'
         });
-//        not.onclick = function() { dosth(this); };
-
+        //        not.onclick = function() { dosth(this); };
 
 
         if ('serviceWorker' in navigator && 'PushManager' in window) {
@@ -68,7 +72,7 @@
                 actions: [{action: 'archive', title: "Archive"}]
             });
 
-            self.addEventListener('notificationclick', function(event) {
+            self.addEventListener('notificationclick', function (event) {
                 event.notification.close();
                 if (event.action === 'archive') {
                     silentlyArchiveEmail();
