增加 推送服务

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         var not = new Notification("show note", {
             body: 'Buzz! Buzz!',
             icon: 'images/icons/apple-icon-120x120.png',
-            vibrate: [200, 100, 200, 100, 200, 100, 200]
+            vibrate: [200, 100, 200, 100, 200, 100, 200],
+            tag: 'vibration - sample'
         });
 
         var not2 = new Notification("联系我", {
