--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             window.addEventListener('load', function () {
 
-                navigator.serviceWorker.register('/sw.js')
+                navigator.serviceWorker.register('sw.js')
                     .then(
                         function (registration) {// Registration was successful
                             console.log('ServiceWorker registration successful with scope: ', registration.scope);
