--- a/index.html
+++ b/index.html
@@ -44,78 +44,78 @@
         not.onclick = function() { dosth(this); };
 
 
-        if ('serviceWorker' in navigator && 'PushManager' in window) {
-
-//            function showNotification() {
-//                Notification.requestPermission(function (result) {
-//                    if (result === 'granted') {
-//                        navigator.serviceWorker.ready.then(function (registration) {
-//                            registration.showNotification('Vibration Sample', {
-//                                body: 'Buzz! Buzz!',
-//                                icon: 'images/icons/apple-icon-120x120.png',
-//                                vibrate: [200, 100, 200, 100, 200, 100, 200],
-//                                tag: 'vibration-sample'
-//                            });
-//                        });
-//                    }
-//                });
-//            }
-//            showNotification();
+//        if ('serviceWorker' in navigator && 'PushManager' in window) {
 //
-//            // 在 SW 中使用
-
-//            self.registration.showNotification("New mail from Alice", {
-//                actions: [{action: 'archive', title: "Archive"}]
+////            function showNotification() {
+////                Notification.requestPermission(function (result) {
+////                    if (result === 'granted') {
+////                        navigator.serviceWorker.ready.then(function (registration) {
+////                            registration.showNotification('Vibration Sample', {
+////                                body: 'Buzz! Buzz!',
+////                                icon: 'images/icons/apple-icon-120x120.png',
+////                                vibrate: [200, 100, 200, 100, 200, 100, 200],
+////                                tag: 'vibration-sample'
+////                            });
+////                        });
+////                    }
+////                });
+////            }
+////            showNotification();
+////
+////            // 在 SW 中使用
+//
+////            self.registration.showNotification("New mail from Alice", {
+////                actions: [{action: 'archive', title: "Archive"}]
+////            });
+////
+////            self.addEventListener('notificationclick', function (event) {
+////                event.notification.close();
+////                if (event.action === 'archive') {
+////                    silentlyArchiveEmail();
+////                } else {
+////                    clients.openWindow("/inbox");
+////                }
+////            }, false);
+//
+//
+////            window.addEventListener('load', function () {
+////
+////                navigator.serviceWorker.register('sw.js')
+////                    .then(
+////                        function (registration) {// Registration was successful
+////                            console.log('ServiceWorker registration successful with scope: ', registration.scope);
+////                        },
+////
+////                        function (err) {// registration failed :(
+////                            console.log('ServiceWorker registration failed: ', err);
+////                        });
+////
+////            });
+//
+//
+//            window.addEventListener('push', function (event) {
+//                var title = 'Yay a message.';
+//                var body = 'We have received a push message.';
+//                var icon = '/images/icons/apple-icon-114x114.png';
+//                var tag = 'simple-push-demo-notification-tag';
+//                var data = {
+//                    doge: {
+//                        wow: 'such amaze notification data'
+//                    }
+//                };
+//                event.waitUntil(
+//                    self.registration.showNotification(title, {
+//                        body: body,
+//                        icon: icon,
+//                        tag: tag,
+//                        data: data
+//                    })
+//                );
 //            });
 //
-//            self.addEventListener('notificationclick', function (event) {
-//                event.notification.close();
-//                if (event.action === 'archive') {
-//                    silentlyArchiveEmail();
-//                } else {
-//                    clients.openWindow("/inbox");
-//                }
-//            }, false);
-
-
-            window.addEventListener('load', function () {
-
-                navigator.serviceWorker.register('sw.js')
-                    .then(
-                        function (registration) {// Registration was successful
-                            console.log('ServiceWorker registration successful with scope: ', registration.scope);
-                        },
-
-                        function (err) {// registration failed :(
-                            console.log('ServiceWorker registration failed: ', err);
-                        });
-
-            });
-
-
-            window.addEventListener('push', function (event) {
-                var title = 'Yay a message.';
-                var body = 'We have received a push message.';
-                var icon = '/images/icons/apple-icon-114x114.png';
-                var tag = 'simple-push-demo-notification-tag';
-                var data = {
-                    doge: {
-                        wow: 'such amaze notification data'
-                    }
-                };
-                event.waitUntil(
-                    self.registration.showNotification(title, {
-                        body: body,
-                        icon: icon,
-                        tag: tag,
-                        data: data
-                    })
-                );
-            });
-
-        } else {
-            console.warn('Push messaging is not supported');
-        }
+//        } else {
+//            console.warn('Push messaging is not supported');
+//        }
 
 
     </script>
