增加 推送服务

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
 
         // 桌面端
-        var not = new Notification("show note", {
+        var not = new Notification("重要通知", {
             body: 'Buzz! Buzz!',
             icon: 'images/icons/apple-icon-120x120.png',
             vibrate: [200, 100, 200, 100, 200, 100, 200],
             tag: 'vibration - sample'
         });
-        not.onclick = function() { dosth(this); };
+//        not.onclick = function() { dosth(this); };
 
 
 //        if ('serviceWorker' in navigator && 'PushManager' in window) {
