--- a/index.html
+++ b/index.html
@@ -36,32 +36,32 @@
 
 
         // 桌面端
-        var not = new Notification("重要通知", {
-            body: '本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急',
-            icon: 'images/icons/apple-icon-120x120.png',
-            vibrate: [200, 100, 200, 100, 200, 100, 200],
-            tag: 'vibration - sample'
-        });
+//        var not = new Notification("重要通知", {
+//            body: '本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急本周的内容，27日开考急急急急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急 斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急斤斤计较急急急急急急急急急急急急急急急',
+//            icon: 'images/icons/apple-icon-120x120.png',
+//            vibrate: [200, 100, 200, 100, 200, 100, 200],
+//            tag: 'vibration - sample'
+//        });
 //        not.onclick = function() { dosth(this); };
-
-
-//        if ('serviceWorker' in navigator && 'PushManager' in window) {
 //
-////            function showNotification() {
-////                Notification.requestPermission(function (result) {
-////                    if (result === 'granted') {
-////                        navigator.serviceWorker.ready.then(function (registration) {
-////                            registration.showNotification('Vibration Sample', {
-////                                body: 'Buzz! Buzz!',
-////                                icon: 'images/icons/apple-icon-120x120.png',
-////                                vibrate: [200, 100, 200, 100, 200, 100, 200],
-////                                tag: 'vibration-sample'
-////                            });
-////                        });
-////                    }
-////                });
-////            }
-////            showNotification();
+//
+//        if ('serviceWorker' in navigator && 'PushManager' in window) {
+
+            function showNotification() {
+                Notification.requestPermission(function (result) {
+                    if ( 1) {
+                        navigator.serviceWorker.ready.then(function (registration) {
+                            registration.showNotification('在SW里使用', {
+                                body: '本周的内容，27日开考急',
+                                icon: 'images/icons/apple-icon-120x120.png',
+                                vibrate: [200, 100, 200, 100, 200, 100, 200],
+                                tag: 'vibration-sample'
+                            });
+                        });
+                    }
+                });
+            }
+            showNotification();
 ////
 ////            // 在 SW 中使用
 //
